--- a/src/fortysecondscv.cls
+++ b/src/fortysecondscv.cls
@@ -439,15 +439,19 @@
 
 \newcommand{\barskill}[3]{
 	% remove 1pt in width to prevent overfull box warnings
-	\begin{tikzpicture}[x=\sidebartextwidth-1pt, y=2ex]
-			\draw[fill, skillbg, rounded corners=0.5em]
+	\begin{tikzpicture}[x=\sidebartextwidth-1pt, y=0.75ex] % Reduced the height to 0.75ex
+			\draw[fill, skillbg, rounded corners=0.15em] % Further reduced corner radius
 				(0, 0) rectangle (1, 1);
-			\draw[fill, iconcolor!70, rounded corners=0.5em]
+			\draw[fill, iconcolor!70, rounded corners=0.15em] % Further reduced corner radius
 				(0, 0) rectangle (#3/100, 1);
 			\node[above right] at (0, 1) {\cvicon{#1} ~ #2};
 	\end{tikzpicture}
 	\par
 }
+
+
+
+
 
 % \skill[<indent>]{<icon>}{<description>} creates in sidebar
 % | [indent] [icon]  some longer skill description  |
