--- a/src/main.tex
+++ b/src/main.tex
@@ -337,7 +337,7 @@
     {
       \textbf{Role}: Developed web functionalities for healthcare platforms, focusing on both front-end and back-end.\\
       * \textbf{Front-end}: Created VUE.js components without jQuery, using libraries such as super-agent for AJAX requests, moment.js for date formatting, simple-vue-validator for validation, and LESS for optimized CSS. Built a custom time-entry component based on jquery.timeentry outside of VUE.js.\\
-      * \textbf{Back-end}: Implemented PHP 5 solutions within the YII Framework, integrating the Carbon extension for date management, along with Python micro-services using SqlAlchemy. Ensured quality with unit tests and maintained REST API documentation via APIARY.\\
+      * \textbf{Back-end}: Implemented PHP 5 solutions within the YII Framework, integrating the Carbon extension for enhanced date management, along with Python micro-services using SqlAlchemy. Ensured quality with precise unit tests and maintained accurate REST API documentation via APIARY.\\
       * \textbf{Mobile and Process Agility}: Conducted detailed Android code reviews and operated within a three-week sprint cycle, actively participating in standups, demos, retros, and grooming. Managed tasks and backlogs through Jira, with documentation centralized in Confluence.\\
       * \textbf{Virtualization}: Deployed each micro-service and software component in Docker containers, facilitating isolated, efficient deployment.\\
     }
@@ -351,15 +351,17 @@
     {Front-End Developer in the Digital TV Sector}
     {Abbeal for Canal+, FR}
     {
-      \textbf{Role}: Developed and maintained WebApp interfaces for Canal+ digital TV receivers, reaching millions of subscribers on TNT, SATELLITE, and IPTV platforms.\\
-      * \textbf{Front-End}: Built with HTML, JavaScript, and CSS, managed by WEBPACK, and executed in a Qt/WebKit instance on a Linux system. Used ES2015 standards via Babel, with build processes managed by GRUNT and NODE.js.\\
+      \textbf{Role}: Developed and maintained WebApp interfaces for Canal+ digital TV receivers, reaching millions on TNT, SATELLITE, and IPTV.\\
+      * \textbf{Front-End}: Engineered HTML, JavaScript, and CSS solutions, managed by WEBPACK, and executed in a Qt/WebKit instance on a Linux system. Utilized ES2015 standards via Babel, with builds managed by GRUNT and NODE.js.\\
       * \textbf{Server-Side}: Supported by a Python UWSGI server hosting the WebApp and managing routing through DBUS for system interactions.\\
-      * \textbf{Libraries and Frameworks}: Transitioned from BACKBONE to ANGULAR for MVC structure; used LODASH for data handling, EASELJS for canvas interactions, and EJS for templating.\\
-      * \textbf{Agile and Testing}: Conducted unit tests with MOCHA, SPY, and SINON. Operated in agile sprints with task tracking on JIRA and documentation in CONFLUENCE.\\
-      * \textbf{Deployment}: Successfully deployed to 400,000 TNT receivers, later expanding to 2 million SAT receivers.\\
-      * \textbf{Nightwatch Project}: Led a Selenium-based initiative for UI navigation testing and REST API simulation, executed remotely on AWS EC2 with Docker.\\
+      * \textbf{Libraries and Frameworks}: Transitioned from BACKBONE to ANGULAR for enhanced MVC architecture efficiency; utilized LODASH for advanced data manipulation, EASELJS for robust interactive canvas operations, and EJS for sophisticated and efficient templating solutions.\\
+      * \textbf{Agile and Testing}: Conducted unit tests with MOCHA, SPY, and SINON, integrating POSTMAN for API testing. Managed agile sprints, tracking tasks on JIRA and documenting in CONFLUENCE.\\
+      * \textbf{Deployment}: Successfully deployed to 400,000 TNT receivers and subsequently expanded to over 2 million SAT subscribers globally.\\
+      * \textbf{Nightwatch Project}: Led a Selenium-based task for UI navigation testing and REST API simulation, implemented on AWS EC2 with Docker.\\
     }
 \end{cvtable}
+
+
 
 
 
@@ -369,13 +371,16 @@
     {Android + NodeJS Developer for IoT}
     {Cisco, Paris (FR)}
     {
-      \textbf{Project}: ConnectedLife - Integrated IoT into TV experiences for home automation.\\
-      * \textbf{Technologies}: Leveraged openHAB to orchestrate IoT, employing Bluetooth (iBeacons), WiFi triangulation (Cisco MSE/Prime), and RFID (Impinj) for localization. Developed a delinearized TV channel experience with personalized playlists and targeted ad insertion based on Cisco analytics.\\
-      * \textbf{Ambilight \& UI}: Designed real-time ambilight effects by processing TV frames with GStreamer to match room lighting (Philips Hue) through Zigbee. Initiated UI in Dart/WebGL and transitioned to HTML/CSS using Cisco’s proprietary JUNO framework.\\
-      * \textbf{Companion Apps}: Built companion apps for wearables and Samsung mobiles in Java, ensuring real-time connectivity through WebSocket and dedicated Node.js servers.\\
-      * \textbf{Achievements}: Demonstrated at CES 2015, featured at Mobile World Congress, and awarded "Best IoT Product" by CSI Magazine.\\
+      \textbf{Project}: ConnectedLife - Seamlessly integrated IoT technology into advanced TV experiences for sophisticated home automation systems.\\
+      * \textbf{Technologies}: Leveraged openHAB to orchestrate IoT, using Bluetooth (iBeacons), WiFi triangulation (Cisco MSE/Prime), and RFID (Impinj) for localization. Developed a delinearized TV channel experience with personalized playlists and targeted ad insertion using Cisco analytics.\\
+      * \textbf{Ambilight \& UI}: Designed real-time ambilight effects by processing TV frames with GStreamer to match room lighting (Philips Hue) effectively through Zigbee. Initially developed UI in Dart/WebGL and smoothly transitioned to HTML/CSS using Cisco’s proprietary JUNO framework.\\
+      * \textbf{Companion Apps}: Built companion apps for wearables and Samsung mobiles in Java, ensuring robust, seamless real-time connectivity through WebSocket and high-performance, dedicated Node.js servers.\\
+      * \textbf{Achievements}: Demonstrated at CES 2015, prominently featured at Mobile World Congress, and awarded \textit{Best IoT Product} by CSI Magazine.\\
     }
 \end{cvtable}
+
+
+
 
 
 
