--- a/src/main.tex
+++ b/src/main.tex
@@ -277,7 +277,7 @@
     {Full stack developer (+devops) | Tech lead}
     {difuze, Montreal}
     {
-      \textbf{Role}: Primarily similar to the previous mission at LVL Studio\\
+      \textbf{Role}: Primarily similar to the previous mission at LVL Studio. Projects:\\
         \noindent\hspace*{1mm}*\textbf{difuzego.com:} Enhanced the initial solution.
         Migration to Angular 14.
         I introduced the MFA authenticator.
@@ -290,11 +290,11 @@
         Additionally, I contributed to the project's streaming and encryption tasks,
         including MPEG/DASH encoding on AWS by Mediaconvert (at start but replaced later by Hybrik) and encrypted by KeyOS/BuyDRM;
         including HLS encoding performed on AWS EC2 MacOS (at start but replaced later by local FFMPEG processing), encrypted using the AES-128 algorithm.
-        In this project, Postgres is used, and µsoft SQL Server over tedious; HTML5 video players are Bitmovin and Accurate \\
-        \noindent\hspace*{1mm}*\textbf{difuzevox.com}: For the video description project aiding visual impairment, I managed the integration of Azure Text-to-Speech, local FFMPEG, and MediaInfo with Auphonic APIs. We used TTML for voice generation and Video.js for multimedia rendering, all under Terraform management. I supervised three developers and one QA, focusing on enhancing media accessibility.\\
+        In this project, Postgres is used, and µsoft SQL Server over tedious; HTML5 video players are Bitmovin and Accurate. \\
+        \noindent\hspace*{1mm}*\textbf{difuzevox.com}: For the video description project aiding visual impairment, I managed the integration of Azure Text-to-Speech, local FFMPEG, and MediaInfo with Auphonic APIs. We used TTML for voice generation and Video.js for multimedia rendering, all under Terraform management. I oversaw three developers and one QA, focusing on enhancing media accessibility.\\
         \noindent\hspace*{1mm}*\textbf{AI Detection Project}: Focused on the detection of specific mouth symbols (e.g., "pucker" shapes) in video frames, scene change detection, and burnt-in text detection using a 3rd-party AI solution. Managed multi-window/browser tab communications via postMessage() and interfacing.\\
     \textbf{CI/CD}: I participated in a small project deployed using Kubernetes.\\
-    \textbf {npm modules}: axios, knex, objection, pg, qrcode, node-ec2-metadata, nodemon, speakeasy, srt2vtt, unirest, uuid-validate, git-repo-info, jest-preset-angular, jest-spec-reporter, mysql-json, puppeteer, hash-wasm, ngx-device-detector, videojs-playlist, videojs-wavesurfer, fast-diff, ngx-virtual-scroller, angular2-text-mask, js-levenshtein, http-proxy, elementtree, chalk, bcrypt...
+    \textbf {NPM modules}: axios, knex, objection, pg, qrcode, node-ec2-metadata, nodemon, speakeasy, srt2vtt, unirest, uuid-validate, git-repo-info, jest-preset-angular, jest-spec-reporter, mysql-json, puppeteer, hash-wasm, ngx-device-detector, videojs-playlist, videojs-wavesurfer, fast-diff, ngx-virtual-scroller, angular2-text-mask, js-levenshtein, http-proxy, elementtree, chalk, bcrypt...
   }
 \end{cvtable}
 
@@ -304,10 +304,10 @@
     {Full-Stack coder, Media Asset Management}
     {LVL Studio, Montreal}
     {
-      \textbf{Role}: As a key contributor to Difuze’s new software stack, I was responsible for architectural decisions, module development, and component creation. I proactively managed the backlog using Jira, conducted code reviews via GitLab, and maintained detailed documentation in Confluence. In a B2B environment with Difuze Inc. as our primary client, my focus was on enhancing difuzego.com, our main product.\\
+      \textbf{Role}: As a key contributor to Difuze’s new software stack, I was responsible for architectural decisions, module development, and component creation. I proactively managed the backlog using Jira, conducted code reviews via GitLab, and maintained detailed documentation in Confluence. In a B2B environment with Difuze Inc. as our primary client, my focus was on enhancing difuzego.com, our main product. Projects:\\
          ** \noindent\hspace*{1mm}\textbf{showcase.com}: Old legacy stack based on YII written in PHP, along with scripts in C\# for scheduling tasks like cron jobs\\
          ** \noindent\hspace*{1mm}\textbf{difuzego.com}: New stack based on \textit{modern} AWS features written in TS.\\
-      \textbf{Purpose}: Development based on a Media Asset Management (MAM) system accessed through HTTPS requests using SOAP protocol, enabling content display in catalog form, with the ability to share films as screeners, preceding deliveries (orders).\\
+      \textbf{Purpose}: Development based on a Media Asset Management system accessed through HTTPS requests using SOAP protocol, enabling content display in catalog form, with the ability to share films as screeners, as promotional links in email, preceding deliveries as orders.\\
       \textbf{Front-end}: Angular 2 (v7.2.9), RxJS, Angular Material, also including various NPM modules like ngx-translate, bitmovin, fs-symlink, hammerjs, ngx-perfect-scrollbar, fortawesome, xml2js, subtitle-converter, socket.io-client, react-image-file-resizer, ng2-file-upload, moment-timezone, i18n-iso-countries, d3, bowser, jsoneditor, lodash, jschardet...\\
       \textbf{Back-end}: RESTful services with OpenAPI, TypeScript Oriented Architecture (tsoa), and NPM imports like exceljs, fs-extra, mustache, socket.io, winston-console-formatter, winston-cloudwatch, uuid-validate, useragent, restify-cors-middleware, restify-errors, reflect-metadata, mime-types, jsonwebtoken, form-data, camelcase, aws-sdk ...; async/await.\\
       \textbf{Package Management}: Proficient with WebPack, Node.js, and yarn.\\
@@ -391,11 +391,14 @@
     {Cisco, Paris (FR)}
     {
       \textbf{Project}: Proof of concept WebApp for ZON TV Portugal.\\
-      * \textbf{Technologies}: Developed using Vanilla JS, CSS3, and HTML5, with a custom UI manager to structure MVC views without a framework. Built core components such as the channel list, channel banner, and EPG grid.\\
-      * \textbf{Integration and Workflow}: Utilized QT on RDK middleware for optimized STB-to-backend data handling. Employed Grunt (Node) and Jenkins for continuous integration, managing tasks through JIRA, and collaborating in scrum sessions.\\
-      * \textbf{Outcome}: Successfully delivered a high-performance WebApp that improved interaction between STB and ZON TV backend, showcased as a proof of concept.
+      * \textbf{Technologies}: Developed using Vanilla JS, CSS3, and HTML5, incorporating the HTML5 video player with a custom UI manager to structure MVC views. Built core components such as the channel list, channel banner, EPG grid.\\
+      * \textbf{Integration and Workflow}: Utilized QT on RDK middleware for optimized STB-to-backend data handling. Employed Grunt (Node) and Jenkins for enhanced continuous integration, efficiently managing tasks through JIRA, and promoting effective teamwork in scrum sessions.\\
+      * \textbf{Outcome}: Successfully delivered a high-performance WebApp that improved user interaction between STB and ZON TV backend, showcased as an effective proof of concept at major industry events.
     }
 \end{cvtable}
+
+
+
 
 
 
@@ -413,11 +416,12 @@
     {Cisco, Paris (FR)}
     {
       \textbf{Project}: HTML5 app for Belgacom on RDK middleware.\\
-      \textbf{Responsibilities}: Developed GPU-accelerated features with CSS3D, WebSockets, AJAX, and Three.JS in BackboneJS; optimized for tablets with Hammer.JS for touch events.
-      Packaged via PhoneGap, optimized for low-end STBs without WebGL.\\
+      \textbf{Responsibilities}: Developed GPU-accelerated features with CSS3D, WebSockets, AJAX, and Three.JS in BackboneJS; optimized for tablet responsiveness and smooth navigation with Hammer.JS for touch events. Packaged via PhoneGap, effectively optimized for low-end STBs lacking WebGL.\\
       \textbf{Outcome}: Delivered high-performance POC with HW acceleration.\\
     }
 \end{cvtable}
+
+
 
 
 
@@ -427,7 +431,7 @@
     {CSS3D + HTML5/JS Front-End Developer}
     {NDS Technologies, Paris}
     {
-      \textbf{Project}: Advanced HTML5 development for embedded devices in digital TV (smart TVs, HDMI sticks).\\
+      \textbf{Project}: Advanced HTML5 development for embedded devices in digital TV (smart TVs, HDMI sticks, Raspberry Pi, and tablets).\\
       \textbf{Responsibilities}:
           Built features for devices including LG TVs, HDMI sticks, and tablets using HTML, CSS3D, and WebGL, with BackboneJS for MVC and ThreeJS for 3D modeling.
           Optimized performance via hardware acceleration tests across engines (QT5/Webkit, WebKitNix, Chromium). Managed cross-compilation for platforms like LG TV, Raspberry Pi, and MacOSX.\\
@@ -436,15 +440,17 @@
 \end{cvtable}
 
 
+
+
 \begin{cvtable}
     \cvitemRight{Aug,\\2012\\–\\Feb,\\2013}
     {AngularJS | BackboneJS Front-End Developer}
     {Cisco (ex NDS), FR}
     {
-      \textbf{Project}: HTML5 software solution for digital TV with patented remote UI and second-screen functionality.\\
+      \textbf{Project}: HTML5 software solution for digital TV with patented remote UI, second-screen functionality, and framework benchmarks for payTV.\\
       \textbf{Responsibilities}:
           Contributed to a patented HTML5 rendering solution for payTV, showcased at IBC. Assessed frameworks (Angular, Backbone, Spine) for HTML5 EPG on STB, finalizing Backbone. Built MVC architecture for set-top box apps and explored FLASH-to-HTML5 tools like Adobe Edge.\\
-      \textbf{Skills}: HTML5 Development, Framework Evaluation, MVC Architecture, Open-Source Tools (GIT, Jira, Jenkins)\\
+      \textbf{Skills}: HTML5 Development, Framework Evaluation, MVC Architecture, Open-Source Tools (GIT, Jira, Jenkins, Confluence, Adobe Edge).\\
     }
 \end{cvtable}
 
@@ -468,7 +474,7 @@
     {
       \textbf{Project}: Integrated NetFront web engine with global team coordination.\\
       \textbf{Responsibilities}:
-          Led NDS/ACCESS collaboration on middleware integration, managing full-stack development and X-platform porting; supervised internships, POCs, and widget bank for STB-to-iPhone integration.\\
+          Led NDS/ACCESS collaboration on STB's middleware integration, managing full-stack development and X-platform porting; supervised internships, POCs, and widget bank for STB-to-iPhone integration.\\
       \textbf{Skills}: Web Tech, Project Management, X-Dept. communication, C coding\\
     }
 \end{cvtable}
@@ -476,36 +482,40 @@
 
 
 \begin{cvtable}
-    \cvitemRight{Feb,\\2002\\–\\Oct,\\2006}
-    {Full-Stack Browser Integration}
-    {Canal+, Paris (FR)}
-    {
-      \textbf{Project}: Integrated Opera 6 into Canal+ Technologies.\\
-      \textbf{Responsibilities}:
-          Led Opera 6 integration with JavaScript 1.3, CSS 2, and Netscape plugins. Built Java-Opera bridges for multimedia and custom plugins. Managed STB games, setting HTML standards.\\
-      \textbf{Skills}: Web Engine Integration, Cross-Platform Porting, Client Customization, Multimedia/Game Integration. C++ programming\\
-    }
+\cvitemRight{Feb,\\2002\\–\\Oct,\\2006}
+{Full-Stack Browser Integration}
+{Canal+, Paris (FR)}
+{
+  \textbf{Project}: Integrated Opera 6 browser into Canal+ Technologies' STB\\
+  \textbf{Responsibilities}:
+      Led Opera 6 integration with JavaScript 1.3, CSS 2, and Netscape plugins. Built Java-Opera bridges for multimedia and custom plugins. Managed STB games, setting modern HTML standards.\\
+  \textbf{Skills}: Web Engine Integration, Cross-Platform Porting, Client Customization, Multimedia/Game Integration, C++ programming, Plugin Development.\\
+}
 
-    \cvitemRight{Sep,\\1999\\–\\Dec,\\2001}
-    {Pay-TV System Integrator}
-    {Canal+,  Paris (FR)}
-    {
-      \textbf{Project}: System integration and testing for Canal+.\\
-      \textbf{Responsibilities}:\
-          Developed comprehensive test scripts and managed end-to-end multimedia platform integration.
-          Supported complex HW/SW setups providing extensive international client support, both remote and on-site.\\
-      \textbf{Skills}: Testing, Hardware/Software Integration, Client Support.\\
-    }
+
+
+
+\cvitemRight{Sep,\\1999\\–\\Dec,\\2001}
+{Pay-TV System Integrator}
+{Canal+,  Paris (FR)}
+{
+  \textbf{Project}: System integration and testing for Canal+ in global operations.\\
+  \textbf{Responsibilities}:
+      Developed comprehensive test scripts and managed end-to-end multimedia platform integration.
+      Supported complex HW/SW setups providing extensive international client support, both remote and on-site.\\
+  \textbf{Skills}: Testing, Hardware/Software Integration, Client Support.\\
+}
 
     \cvitemRight{Oct,\\1998\\–\\Aug,\\1999}
     {DSP Engineer: AEC for Mobiles}
     {ALTEN, Issy Les Moulineaux (FR)}
     {
-      \textbf{Project}: Developed Acoustic Echo Cancellation (AEC) to enhance audio clarity in mobile devices.\\
+      \textbf{Project}: Developed Acoustic Echo Cancellation (AEC) to enhance audio clarity in mobile devices and improve speakerphone performance.\\
       \textbf{Responsibilities}:
           Tuned AEC algorithms for echo suppression, noise reduction, and speech quality. Built a Visual C++ executable for hands-free call simulation and testing in varied environments.\\
-      \textbf{Skills}: Signal Processing, MATLAB, C/C++, Audio Tuning.
+      \textbf{Skills}: Signal Processing, MATLAB, C/C++, Audio Tuning, Algorithm Optim.
     }
+
 \end{cvtable}
 
 
